# arceval

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
arceval/: __init__.py  __main__.py  main.py
arceval/cli/: __init__.py  app.py
arceval/cli/commands/: analyze.py  version.py
arceval/cli/middleware/: __init__.py  error_handler.py
arceval/core/: __init__.py
arceval/core/models/: __init__.py  config.py  project.py  report.py
arceval/core/ports/: __init__.py  ai_client.py  report_renderer.py
arceval/core/services/: collector.py  sanitizer.py  scorer.py
arceval/core/use_cases/: __init__.py  analyze_project.py
arceval/infrastructure/: __init__.py
arceval/infrastructure/ai/: __init__.py  claude_client.py  gemini_client.py  openai_client.py  prompt_builder.py  provider_factory.py  response_parser.py
arceval/infrastructure/filesystem/: __init__.py  project_reader.py
arceval/presentation/: __init__.py
arceval/presentation/exporters/: __init__.py  json_exporter.py  markdown_exporter.py
arceval/presentation/terminal/: __init__.py  renderer.py
arceval/presentation/terminal/components/: header.py  recommendations.py  score_table.py  summary_bar.py
arceval/presentation/terminal/themes/: __init__.py  default.py
arceval/shared/: __init__.py  config.py  constants.py  exceptions.py  logging.py
arceval/shared/utils/: file_utils.py  text_utils.py
docs/: architecture.md  configuration.md  development.md
tests/: conftest.py
tests/fixtures/mock_responses/: claude_analysis.json
tests/fixtures/sample_project/: README.md
tests/fixtures/sample_project/src/: main.py
tests/integration/: test_claude_client.py  test_pipeline.py
tests/unit/: test_collector.py  test_provider_factory.py  test_report_formatter.py  test_sanitizer.py  test_scorer.py
tree-maker/: 20260513084642845-tree.md
