[project]
name = "arceval"
version = "0.1.0"
description = "Architecture, evaluated. AI-powered enterprise readiness analyzer for codebases."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Arceval Maintainers" }
]
keywords = ["architecture", "cli", "ai", "claude", "enterprise", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.39.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.30.0"]
gemini = ["google-genai>=1.0.0"]
all = ["anthropic>=0.39.0", "openai>=1.30.0", "google-genai>=1.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "anthropic>=0.39.0",
    "openai>=1.30.0",
    "google-genai>=1.0.0",
]

[project.scripts]
arceval = "arceval.cli.app:app"

[project.urls]
Homepage = "https://github.com/arceval/arceval"
Documentation = "https://github.com/arceval/arceval/tree/main/docs"
Issues = "https://github.com/arceval/arceval/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arceval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests that may be slower",
    "unit: fast unit tests",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
